--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
         compiler: ${{ matrix.compiler }}
         build-type: ${{ matrix.build-type }}
         ubuntu: |
-          apt: libmc-rtc-dev
+          apt: libmc-rtc-dev libusb-dev
           apt-mirrors:
             mc-rtc:
               cloudsmith: mc-rtc/head
