Forgot the install

--- a/plugin/CMakeLists.txt
+++ b/plugin/CMakeLists.txt
@@ -19,6 +19,7 @@ set(plugin_HDR
 
 add_executable(EmergencyButtonServer src/EmergencyButtonServer.cpp)
 target_link_libraries(EmergencyButtonServer PUBLIC emergency_button mc_rtc::mc_control rt)
+install(TARGETS EmergencyButtonServer DESTINATION bin)
 
 # The add_plugin macro is provided by mc_rtc
 add_plugin(EmergencyButtonPlugin "${plugin_SRC}" "${plugin_HDR}")
